--- a/samples/advanced-integration.html
+++ b/samples/advanced-integration.html
@@ -189,7 +189,7 @@
     <script>
       // Initialize with custom options
       ChatbotWidget.init({
-        apiUrl: "https://localhost:7077",
+        apiUrl: "https://chatbot-widget-api-latest.onrender.com",
         botName: "Custom Assistant",
         primaryColor: "#4CAF50",
         welcomeMessage:
@@ -218,7 +218,7 @@
         ChatbotWidget.close();
         setTimeout(() => {
           ChatbotWidget.init({
-            apiUrl: "https://localhost:7077",
+            apiUrl: "https://chatbot-widget-api-latest.onrender.com",
             botName: "Custom Assistant",
             primaryColor: color,
             welcomeMessage:
