--- a/samples/basic-integration.html
+++ b/samples/basic-integration.html
@@ -77,7 +77,7 @@
     <script src="https://mukeshjena.github.io/chatbot-ui/dist/chatbot-widget.min.js"></script>
     <script>
       ChatbotWidget.init({
-        apiUrl: "https://localhost:7077",
+        apiUrl: "https://chatbot-widget-api-latest.onrender.com",
         botName: "AI Assistant",
       });
     </script>
