--- a/samples/website-example.html
+++ b/samples/website-example.html
@@ -406,7 +406,7 @@
     <script>
       // Initialize the chatbot widget with the same primary color as the website
       ChatbotWidget.init({
-        apiUrl: "https://localhost:7077",
+        apiUrl: "https://chatbot-widget-api-latest.onrender.com",
         botName: "TechGadgets Assistant",
         primaryColor: "#3f51b5",
         welcomeMessage:
